# generator-example

./: CMakeLists.txt  README.md  generator.sh
src/: Generated.hpp  main.cpp
